--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@codemirror/state": "^6.1.0",
         "@codemirror/view": "^6.0.3",
         "@lezer/highlight": "^1.0.0",
+        "@linusborg/vue-simple-portal": "^0.1.5",
         "@sindarius/gcodeviewer": "^3.1.0",
         "@types/node": "^16.11.22",
         "@types/overlayscrollbars": "^1.12.1",
